# random-beacon

./: Cargo.toml  Makefile  README.md  katex-header.html
reports/performance/: keygen_communication.md  keygen_perf.md  tier1_communication.md  tier1_perf_for_various_ell.md  tier1_perf_no_adversaries.md  tier1_perf_no_adversaries_bls.md  tier1_perf_various_t.md  tier1_perf_with_adversaries.md  tier2_keygen.md  tier2_signing.md  tier2_signing_perf_for_various_t.md  tier3_perf.md
src/: elgamal.rs  lib.rs  utils.rs  vrf.rs
src/keygen/: core.rs  mod.rs  tests.rs
src/tier1/: core.rs  tests.rs
src/tier2/: measure.rs  mod.rs  state_machine.rs  test.rs
src/tier3/: core.rs  mod.rs  test.rs
